--- a/house_price server .ipynb
+++ b/house_price server .ipynb
@@ -5,7 +5,7 @@
    "id": "52d40ed6-d310-4597-b9a1-20f8b7f29929",
    "metadata": {},
    "source": [
-    "# # Search for all runs across all experiments"
+    "# # Search for all experiments"
    ]
   },
   {
