--- a/Asteroids classification.ipynb
+++ b/Asteroids classification.ipynb
@@ -13,7 +13,7 @@
    "id": "2e288b41-00ac-406f-a54a-18ec22f94b40",
    "metadata": {},
    "source": [
-    "# Loading Librarys And Data"
+    "# Loading Libraries And Data"
    ]
   },
   {
@@ -322,7 +322,7 @@
    "id": "9ea26f23-25c9-4b94-9cf2-f3b3a47a4e7b",
    "metadata": {},
    "source": [
-    "# EDA For Numaric Data"
+    "# EDA For Numeric Data"
    ]
   },
   {
