--- a/Asteroids classification.ipynb
+++ b/Asteroids classification.ipynb
@@ -952,7 +952,7 @@
    "id": "3d2b1a17-9c19-4147-ac65-780fe348190d",
    "metadata": {},
    "source": [
-    "# Finding And Removeing outlier for numaric data using IQR"
+    "# Finding And Removing outlier for numeric data using IQR"
    ]
   },
   {
